# rust-synax

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/interface_practice/: async_traits.rs  closures.rs  concurrency.rs  const_generics.rs  error_handling.rs  example.rs  implementations.rs  lifetimes.rs  macros.rs  mod.rs  pipeline.rs  traits.rs  unsafe_code.rs
src/sort/: bubble_sort.rs  bucket_sort.rs  counting_sort.rs  heap_sort.rs  insertion_sort.rs  merge_sort.rs  mod.rs  quick_sort.rs  radix_sort.rs  selection_sort.rs  shell_sort.rs
src/test/: ex1.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  ex16.rs  ex17.rs  ex18.rs  ex19.rs  ex2.rs  ex20.rs  ex21.rs  ex22.rs  ex3.rs  ex4.rs  ex5.rs  ex6.rs  ex7.rs  ex8.rs  ex9.rs  mod.rs
src/tree/: mod.rs
